...
        android:orientation="vertical"
        android:background="@drawable/shape"
        android:padding="16dp">

        <!-- Title of the Activity -->
        <TextView
            android:id="@+id/text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="Activity Title"
            android:textSize="18sp"
            android:textStyle="bold" />
...
                android:layout_marginEnd="8dp"
                android:text="Done"
                android:textColor="?attr/colorAccent"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="?android:attr/selectableItemBackground"
                android:text="Edit"
                android:textColor="?attr/colorAccent" />
...
